# bksys-gateway-client

./: .gitignore  Dockerfile  README.md  debug.py  pyproject.toml
bksys-gateway-client/: __init__.py  settings.py
bksys-gateway-client/routes/: monitoring.py
bksys-gateway-client/services/: account_service.py  operations_rule_service.py
bksys_gateway_client/: __init__.py  __main__.py  settings.py
bksys_gateway_client/helpers/: __init__.py  response.py  schemas.py
bksys_gateway_client/routes/: __init__.py  accounts.py  accounts_routes.py  loans.py  monitoring.py  monitoring_routes.py  operations_rule_routes.py  transactions.py  transactions_routes.py
bksys_gateway_client/schemas/: __init__.py  accounts.py  accounts_schemas.py  common_schemas.py  pagination_schemas.py  payment_limit_schemas.py  transaction_schemas.py
bksys_gateway_client/services/: __init__.py  account_service.py  accounts_service.py  operations_rule_service.py  transaction_service.py
